# tuya-cloudcutter

./: .gitignore  Dockerfile  HOST_SPECIFIC_INSTRUCTIONS.md  INSTRUCTIONS.md  LICENSE  README.md  SUPPORTED.md  ap_preambles.txt  common.sh  common_run.sh  pyproject.toml  run_detach.sh  run_flash.sh  running-with-known-secrets.md  safety_checks.sh  tuya-cloudcutter.sh
configured-devices/: .gitignore
custom-firmware/: OpenRTL8710B_UG_1.18.225.img  OpenRTL87X0C_1.18.207_ota.img  OpenRTL87X0C_1.18.219_ota.img  README.md
device-profiles/: .gitignore  README.md
device-profiles/schema/: atop.online.debug.log.json  tuya.device.dynamic.config.ack.json  tuya.device.dynamic.config.get.json  tuya.device.info.sync.json  tuya.device.mesh.get.json  tuya.device.timer.astronomical.list.json  tuya.device.timer.count.json  tuya.device.uuid.pskkey.get.json
profile-building/: .gitignore  README.md  build_profile.py  check_upgrade.py  copy_files.py  extract.py  extract_beken.py  extract_rtl8710bn.py  extract_rtl8720cf.py  generate_profile_classic.py  generate_profile_legacy.py  generate_profile_universal.py  haxomatic.py  process_app.py  process_storage.py  pull_active_response.py  pull_schema.py  pyproject.toml  tuya_api_connection.py
proof-of-concept/: poc.py  test_device_exploitable.py
scripts/: README.md  configure-downlight.py-example  post-flash.sh-example  pre-safety-checks.sh-example  pre-setup.sh-example  pre-wifi-config.sh-example  pre-wifi-exploit.sh-example
src/: Pipfile  get_input.py  requirements.txt  select_SKU.py  setup_apmode.sh
src/cloudcutter/: __main__.py  (+3 more)
(+218 files in other folders)
