[tool.poetry]
name = "build_profile"
version = "0.1.0"
description = ""
authors = ["Cossid"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
bk7231tools = {extras = ["cli"], version = "^1.3.0"}
sslpsk2 = "^1.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
